--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -201,7 +201,6 @@ footer nav ul {
 	justify-content: center;
 	margin-bottom: 50px;
 	gap: 10px;
-	margin-top: -30px;
 }
 
 button {
@@ -245,10 +244,41 @@ button:focus {
 	justify-content: center;
 	gap: 15px;
 	align-items: center;
-	margin-bottom: 90px;
+	margin-bottom: 80px;
 	margin-top: 130px;
 }
 .modifier {
 	display:flex;
 	gap: 10px;
+}
+
+.modal {
+	position: fixed;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+	animation: fadeIn .3s both;
+}
+
+.modal-wrapper {
+	width: 630px;
+	height: 688px;
+	border-radius: 10px;
+	background-color: white;
+	animation: slideFromTop .5s both;
+}
+
+@keyframes fadeIn {
+	from { opacity: 0;}
+	to { opacity: 1;}
+}
+
+@keyframes slideFromTop {
+	from { transform: translateY(-50px);}
+	to { transform: translateY(0px);}
 }
