--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -419,6 +419,11 @@ button:focus {
     height: 169px;
 	margin-top: 30px;
 }
+
+.photo-view img{
+	width: auto;
+	height: auto;
+}
   .title-add-photo {
 	display: flex;
 	color: black;
