--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,487 +3,580 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
-	font-size: 14px;
+  max-width: 1140px;
+  margin: auto;
+  font-family: "Work Sans";
+  font-size: 14px;
 }
 header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
 }
 section {
-	margin: 50px 0
+  margin: 50px 0;
 }
 
-h1{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Syne';
-	font-size: 22px;
-	font-weight: 800;
-	color: #B1663C
+h1 {
+  display: flex;
+  flex-direction: column;
+  font-family: "Syne";
+  font-size: 22px;
+  font-weight: 800;
+  color: #b1663c;
 }
 
 h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
-;
+  font-family: "Work Sans";
+  font-size: 10px;
+  letter-spacing: 0.1em;
 }
 
-h2{
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 30px;
-	color: #1D6154
+h2 {
+  font-family: "Syne";
+  font-weight: 700;
+  font-size: 30px;
+  color: #1d6154;
 }
 nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
 nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+  padding: 0 10px;
+  font-size: 1.2em;
 }
 
 li:hover {
-	color: #B1663C;
+  color: #b1663c;
+  cursor: pointer;
 }
 
 a {
-	padding: 0 10px;
-	
-	color: black;
-	cursor: pointer;
-    text-decoration:none;
+  padding: 0 10px;
 
-	
+  color: black;
+  cursor: pointer;
+  text-decoration: none;
 }
 a:hover {
-	color: #B1663C;
+  color: #b1663c;
 }
 #introduction {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 #introduction figure {
-	flex: 1
+  flex: 1;
 }
 #introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+  display: block;
+  margin: auto;
+  width: 80%;
 }
 
 #introduction article {
-	flex: 1
+  flex: 1;
 }
 #introduction h2 {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 #introduction p {
-	margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 .gallery img {
-	width: 100%;
-
+  width: 100%;
 }
 #contact {
-	width: 50%;
-margin: auto;
+  width: 50%;
+  margin: auto;
 }
 #contact > * {
-	text-align: center;
-
+  text-align: center;
 }
-#contact h2{
-	margin-bottom: 20px;
+#contact h2 {
+  margin-bottom: 20px;
 }
 #contact form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 #contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 #contact label {
-	margin: 2em 0 1em 0;
+  margin: 2em 0 1em 0;
 }
 #contact textarea {
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
+input[type="submit"] {
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  background-color: #1d6154;
+  margin: 2em auto;
+  width: 180px;
+  text-align: center;
+  border-radius: 60px;
 }
 
 footer nav ul {
-	display: flex;
-	justify-content: flex-end;
-	margin: 2em
+  display: flex;
+  justify-content: flex-end;
+  margin: 2em;
 }
 
 #buttons {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 50px;
-	gap: 10px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  gap: 10px;
 }
 
 button {
-	border: #1D6154 1px solid;
-	border-radius: 60px;
-	font-size: 16px;
-	color: #1D6154;
-	text-align: center;
-	font-weight: 700;
-	padding: 9px;
-	background-color: white;
-	font-family:'syne';
+  border: #1d6154 1px solid;
+  border-radius: 60px;
+  font-size: 16px;
+  color: #1d6154;
+  text-align: center;
+  font-weight: 700;
+  padding: 9px;
+  background-color: white;
+  font-family: "syne";
 }
-button:hover{
-	background-color: #1D6154;
-	color: white;
+button:hover {
+  background-color: #1d6154;
+  color: white;
 }
 button:focus {
-	background-color: #1D6154;
-	color: white;
+  background-color: #1d6154;
+  color: white;
 }
 .edit-mode-bar {
-	background-color: black;
-	color: white;
-	padding: 10px;
-	text-align: center;
-	font-size: 16px;
-	font-family:  "Work Sans";
-	font-weight: 400;
-	width: 100%;
-	top: 0;
-	left: 0;
-	position:fixed;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 16px;
+  font-family: "Work Sans";
+  font-weight: 400;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
 }
 .fa-solid {
-	width: 15.58px;
-	height: 15.58px;
+  width: 15.58px;
+  height: 15.58px;
 }
 .mesprojets {
-	display: flex;
-	justify-content: center;
-	gap: 15px;
-	align-items: center;
-	margin-bottom: 80px;
-	margin-top: 130px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  align-items: center;
+  margin-bottom: 80px;
+  margin-top: 130px;
 }
 .modifier {
-	display:flex;
-	gap: 10px;
-	cursor: pointer;
+  display: flex;
+  gap: 10px;
+  cursor: pointer;
 }
 .fa-xmark {
-	height: 24px;
-	width: 24px;
+  height: 24px;
+  width: 24px;
 }
 .js-modal-close {
-	position: absolute;
-    right: 10px;
-    top: 10px;
-	border: none;
-	color: black;
-	border-radius: 0;
-	padding: 0;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border: none;
+  color: black;
+  border-radius: 0;
+  padding: 0;
 }
 .js-modal-close:hover {
-	background-color: transparent;
-	color: black;
+  background-color: transparent;
+  color: black;
 }
 .modal {
-	position: fixed;
-	display:flex;
-	align-items: center;
-	justify-content: center;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.8);
-	animation: fadeIn .3s both;
-	overflow: scroll;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  animation: fadeIn 0.3s both;
+  overflow: scroll;
 }
 .modal-content img {
-	width: 79px;
+  width: 79px;
 }
-.modal-content{
-  	flex-direction: column;
-	margin-top: 50px;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	margin-left: 50px;
+.modal-content {
+  flex-direction: column;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  margin-left: 50px;
 }
-
 
 .modal-content .trash {
-	width: 20px;
-	height: 20px;
-	background-color: black;
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	color: white;
-	font-size: 12px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 3px;
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
 }
 .modal-content .trash i {
-	width: auto;
-	height: auto;
+  width: auto;
+  height: auto;
 }
 
 .modal-content.hidden {
-	visibility: hidden;
-	opacity: 0;
-	transition: visibility 0s, opacity 0.3s;
-  }
-  
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s;
+}
+
 .modal-content article {
-	position: relative;
-	width: 79px;
+  position: relative;
+  width: 79px;
 }
 .modal-wrapper {
-	width: 630px;
-	height: 688px;
-	border-radius: 10px;
-	background-color: white;
-	animation: slideFromTop .5s both;
+  width: 630px;
+  height: 688px;
+  border-radius: 10px;
+  background-color: white;
+  animation: slideFromTop 0.5s both;
 }
 .add-photo-btn {
-	position: absolute;
-	bottom: 20px; /* Adjust the value as needed */
-	left: 50%;
-	transform: translateX(-50%); /* Center the button horizontally */
-	/* Add any other styles for the button */
-  }
-.back-btn{
-	position: absolute;
-    top: 1px;
-    border: none;
-    left: 10px;
-    font-size: 20px;
-    color: black;
+  position: absolute;
+  bottom: 20px; /* Adjust the value as needed */
+  left: 50%;
+  transform: translateX(-50%); /* Center the button horizontally */
+  /* Add any other styles for the button */
+}
+.back-btn {
+  position: absolute;
+  top: 1px;
+  border: none;
+  left: 10px;
+  font-size: 20px;
+  color: black;
 }
 .back-btn:hover {
-	background-color: transparent;
-	color: black;
+  background-color: transparent;
+  color: black;
 }
 @keyframes fadeIn {
-	from { opacity: 0;}
-	to { opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes slideFromTop {
-	from { transform: translateY(-50px);}
-	to { transform: translateY(0px);}
+  from {
+    transform: translateY(-50px);
+  }
+  to {
+    transform: translateY(0px);
+  }
 }
 
-.add-photo{
-	position: relative;
-	background-color: #CBD6DC; /* Couleur de fond du bouton */
-	border: none; /* Suppression de la bordure par défaut */
-	padding: 10px 20px; /* Espacement interne du bouton */	
-	border-radius: 5px; /* Arrondir les coins du bouton */
-	cursor: pointer; /* Changer le curseur de la souris au survol */
-	z-index: 0; /* Positionner le bouton en arrière-plan */
-	border-radius: 50px;
-  }
-  .add-photo:hover {
-	background-color: #CBD6DC; /* Couleur de fond du bouton au survol */
-	color: white; /* Couleur du texte du bouton au survol */
-  }
-  .add-photo p {
-	margin: 0; /* Suppression des marges par défaut */
-	color: #306685; /* Couleur du texte du bouton */
-	z-index: 0; /* Positionner le texte en arrière-plan */
-  }
-  
-  .add-photo input[type="file"] {
-	opacity: 0; /* Rendre l'entrée de fichier invisible */
-	position: absolute; /* Positionner l'entrée de fichier absolument */
-	left: 0; /* Positionner l'entrée de fichier à gauche du bouton */
-	top: 0; /* Positionner l'entrée de fichier en haut du bouton */
-	width: 100%; /* Définir la largeur de l'entrée de fichier à 100% du bouton */
-	height: 100%; /* Définir la hauteur de l'entrée de fichier à 100% du bouton */
-	z-index: 1; /* Positionner l'entrée de fichier au premier plan */
-  }
+.add-photo {
+  position: relative;
+  background-color: #cbd6dc; /* Couleur de fond du bouton */
+  border: none; /* Suppression de la bordure par défaut */
+  padding: 10px 20px; /* Espacement interne du bouton */
+  border-radius: 5px; /* Arrondir les coins du bouton */
+  cursor: pointer; /* Changer le curseur de la souris au survol */
+  z-index: 0; /* Positionner le bouton en arrière-plan */
+  border-radius: 50px;
+}
+.add-photo:hover {
+  background-color: #cbd6dc; /* Couleur de fond du bouton au survol */
+  color: white; /* Couleur du texte du bouton au survol */
+}
+.add-photo p {
+  margin: 0; /* Suppression des marges par défaut */
+  color: #306685; /* Couleur du texte du bouton */
+  z-index: 0; /* Positionner le texte en arrière-plan */
+}
 
-  .add-photo-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin-left: 50px;
-	margin-top: 80px;
-	width: 420px;
-	height: 169px;
-	background-color: #E8F1F6;
-  }
+.add-photo input[type="file"] {
+  opacity: 0; /* Rendre l'entrée de fichier invisible */
+  position: absolute; /* Positionner l'entrée de fichier absolument */
+  left: 0; /* Positionner l'entrée de fichier à gauche du bouton */
+  top: 0; /* Positionner l'entrée de fichier en haut du bouton */
+  width: 100%; /* Définir la largeur de l'entrée de fichier à 100% du bouton */
+  height: 100%; /* Définir la hauteur de l'entrée de fichier à 100% du bouton */
+  z-index: 1; /* Positionner l'entrée de fichier au premier plan */
+}
 
-  .text-add-photo {
-	display: flex;
-	color: black;
-	justify-content: center;
-	margin-right: 60px;
-	margin-top: -20px;
-  }
+.add-photo-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 50px;
+  margin-top: 80px;
+  width: 420px;
+  height: 169px;
+  background-color: #e8f1f6;
+}
+
+.text-add-photo {
+  display: flex;
+  color: black;
+  justify-content: center;
+  margin-right: 60px;
+  margin-top: -20px;
+}
 .photo-view {
-	display: flex;
-	justify-content: center;
-	background-color: rgba(232, 241, 246, 1);
-	width: 420px;
-    margin-left: 55px;
-    height: 169px;
-	margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(232, 241, 246, 1);
+  width: 420px;
+  margin-left: 55px;
+  height: 169px;
+  margin-top: 30px;
 }
 
-.photo-view img{
-	width: auto;
-	height: auto;
+.photo-view img {
+  width: auto;
+  height: auto;
 }
-  .title-add-photo {
-	display: flex;
-	color: black;
-	font-weight: 400;
-	font-size: 26px;
-	font-family: 'work sans';
-	align-items: center;
-	margin-right: 50px;
+.title-add-photo {
+  display: flex;
+  color: black;
+  font-weight: 400;
+  font-size: 26px;
+  font-family: "work sans";
+  align-items: center;
+  margin-right: 50px;
 }
 
- .img-icon{
-	display: flex;
-	margin-bottom: 10px;
- }
- .fa-regular, .far {
-    font-weight: 400;
-    font-size: 50px;
-	color: #B9C5CC;
- }
+.img-icon {
+  display: flex;
+  margin-bottom: 10px;
+}
+.fa-regular,
+.far {
+  font-weight: 400;
+  font-size: 50px;
+  color: #b9c5cc;
+}
 
- #add-photo-form {
-	display: flex;
-	flex-direction: column;
-	gap: 30px;
-	margin-top: 30px;
- }
+#add-photo-form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 30px;
+}
 
- #title-field {
-		width: 420px;
-		height: 51px;
-		background: #FFF;
-		box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
-		border: none;
-		margin-left: 30px;
- }
+#title-field {
+  width: 420px;
+  height: 51px;
+  background: #fff;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+  border: none;
+  margin-left: 30px;
+}
 
- #category-select{
-	width: 420px;
-		height: 51px;
-		background: #FFF;
-		box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
-		border: none;
-		margin-left: 30px;
- }
+#category-select {
+  width: 420px;
+  height: 51px;
+  background: #fff;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+  border: none;
+  margin-left: 30px;
+}
 
- .photo-title , .cat-title{
-	margin-left: 30px;
- }
+.photo-title,
+.cat-title {
+  margin-left: 30px;
+}
 
- #validate-btn {
-	width: 237px;
-height: 36px;
-border-radius: 60px;
-background: #1D6154;
-margin-left: 135px;
-color: #FFF;
- }
+#validate-btn {
+  width: 237px;
+  height: 36px;
+  border-radius: 60px;
+  background: #1d6154;
+  margin-left: 135px;
+  color: #fff;
+}
 
- .line {
-	width: 420px;
-border: 1px #B3B3B3 solid;
-margin-left: 30px;
- }
+.line {
+  width: 420px;
+  border: 1px #b3b3b3 solid;
+  margin-left: 30px;
+}
+#line1 {
+  display: flex;
+  justify-content: center;
+  width: 420px;
+  border: 1px #b3b3b3 solid;
+  margin-left: 100px;
+  margin-top: 300px;
+}
