--- a/FrontEnd/login-page.css
+++ b/FrontEnd/login-page.css
@@ -1,119 +1,218 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 body {
-    max-width: 1140px;
-    margin: auto;
-    font-family: 'Work Sans';
-    font-size: 14px;
+  max-width: 1140px;
+  margin: auto;
+  font-family: "Work Sans";
+  font-size: 14px;
 }
 
 #login-header {
-    color: #1D6154;
-text-align: center;
-font-family: 'Syne';
-font-size: 30px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin-bottom: 60px;
+  color: #1d6154;
+  text-align: center;
+  font-family: "Syne";
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 60px;
 }
 
 nav li {
-    padding: 0 10px;
-    font-size: 1.2em;
+  padding: 0 10px;
+  font-size: 1.2em;
 }
 
 li:hover {
-	color: #B1663C;
+  color: #b1663c;
+  cursor: pointer;
 }
 a {
-	padding: 0 10px;
-	font-size: 1.2em;
-	color: black;
-	cursor: pointer;
-    text-decoration:none;
-    font-weight: bold;
-	
+  padding: 0 10px;
+  font-size: 1.2em;
+  color: black;
+  cursor: pointer;
+  text-decoration: none;
+  font-weight: bold;
+  border: none;
 }
 a:hover {
-	color: #B1663C;
+  color: #b1663c;
 }
 nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
 h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
+  font-family: "Work Sans";
+  font-size: 10px;
+  letter-spacing: 0.1em;
 }
 h1 {
-    display: flex;
-    flex-direction: column;
-    font-family: 'Syne';
-    font-size: 22px;
-    font-weight: 800;
-    color: #B1663C;
+  display: flex;
+  flex-direction: column;
+  font-family: "Syne";
+  font-size: 22px;
+  font-weight: 800;
+  color: #b1663c;
 }
 header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
 }
 
 form {
-    width: 379px;
-    margin: 0 auto;
-}
-.login-form-field{
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
+  width: 379px;
+  margin: 0 auto;
 }
 .login-form-field {
-    border: none;
-    background: #FFF;
-    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
-    width: 379px;
-    height: 51px;
-    flex-shrink: 0;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
 }
-#login-form-submit{
-    justify-content: center;
-    display: flex;
-    margin: 0 auto;
-    border-radius: 60px;
-background: #1D6154;
-width: 179px;
-height: 36px;
-flex-shrink: 0;
-color: #FFF;
-text-align: center;
-font-family: 'Syne';
-font-size: 14px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-border: 0px;
+.login-form-field {
+  border: none;
+  background: #fff;
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+  width: 379px;
+  height: 51px;
+  flex-shrink: 0;
+}
+#login-form-submit {
+  justify-content: center;
+  display: flex;
+  margin: 0 auto;
+  border-radius: 60px;
+  background: #1d6154;
+  width: 179px;
+  height: 36px;
+  flex-shrink: 0;
+  color: #fff;
+  text-align: center;
+  font-family: "Syne";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border: 0px;
+  cursor: pointer;
+}
+
+#error-message {
+  display: flex;
+  color: black;
+  font-size: 18px;
+  font-weight: 900;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.mdp-oublié {
+  display: flex;
+  text-decoration: underline;
+  justify-content: center;
+  color: black;
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+.mdp-oublié:hover {
+  color: #b1663c;
+  cursor: pointer;
+}
+
+.mention-legale {
+  position: fixed;
+  bottom: 0;
+  right: 370px;
+  margin-bottom: 10px;
 }
